extensions for var and def